--- a/app/views/pages/dashboard.html.haml
+++ b/app/views/pages/dashboard.html.haml
@@ -1,3 +1,4 @@
 %div.container
     %h1 Dashboard
     = button_to('signout', destroy_user_session_path, method: :delete, class: "btn btn-primary")
+    = link_to('preferences', preferences_path)
