--- a/app/views/pages/dashboard.html.haml
+++ b/app/views/pages/dashboard.html.haml
@@ -1,6 +1,12 @@
 %div.container
     %h1 Dashboard
-    %h6 Preferences
     = button_to('signout', destroy_user_session_path, method: :delete, class: "btn btn-primary")
     = link_to('profile', view_profile_path(current_user))
-    = link_to('preferences', preferences_path)
+    = link_to('Search User', friends_path)
+
+-# :javascript
+-#     document.querySelector('#user_id').addEventListener("keyup", (e)=>{
+-#         if (Number.isInteger(parseInt(e.key))){
+-#             console.log(@users)
+-#         }
+-#     })
