--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,9 @@
     </style>
   </head>
   <body>
+    <% if user_signed_in?  %>
+      <%= render "layouts/header" %>
+    <% end %>
     <%= render 'layouts/alerts' %>
     <%= yield %>
   </body>
