--- a/app/views/friends/index.html.haml
+++ b/app/views/friends/index.html.haml
@@ -1,22 +1,5 @@
 %nav.navbar
     = form_with url: "/friends", method: :post, class: "form-inline d-flex mx-auto" do |f|
-        = f.text_field :username, placeholder: "Search user", class: "form-control mr-sm-2"
-        = f.submit "Search", class: "btn btn-outline-success my-2 my-sm-0"
+        = f.text_field :username, placeholder: "Search user", oninput: "this.form.requestSubmit()" , class: "form-control mr-sm-2"
 
-- if @users.present?
-    %div.container
-        %table.table
-            %thead.table-dark
-                %tr
-                    %th First Name
-                    %th Last Name
-                    %th Preferences
-                    %th Details
-            %tbody
-                - @users.each do |user|
-                    %tr
-                        %th= user.first_name
-                        %th= user.last_name
-                        %th= "#{user.user_preferences.count} Preferences"
-                        - unless current_user.id == user.id
-                            %th= link_to('view profile', view_profile_path(user))
+%div.container{id: "search_results"}
