--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -12,6 +12,27 @@
                 .nav-item
                     = link_to('Messages', channels_path, class: "nav-link")
                 .nav-item
-                    = link_to('Search', friends_path, class: "nav-link")
+                    = link_to( friends_path, class: "nav-link") do 
+                        %i.fa-solid.fa-magnifying-glass
+            - if pending_request().count > 0
+                %div{style: "margin-right: 5px;"}
+                    %button.btn.btn-primary{"data-bs-toggle": "modal", "data-bs-target": "#staticBackdrop"}
+                        %i.fa-solid.fa-user-group
+                        %span.badge.badge-dark= pending_request().count
+                    .modal.fade{id: "staticBackdrop", "data-bs-backdrop": "static", "data-bs-keyboard": "false", "tabindex": "-1", "aria-labelledby": "staticBackdropLabel", "aria-hidden": "true"}
+                        .modal-dialog.modal-dialog-scrollable
+                            .modal-content
+                                .modal-header
+                                    %h5.modal-title{id: "staticBackdropLabel"} Friend Requests
+                                    %button.btn-close{"data-bs-dismiss": "modal", "aria-label": "Close"}
+                                .modal-body 
+                                    %ul.list-group
+                                        - pending_friends().each do |user|
+                                            %li.list-group-item.d-flex.justify-content-between.align-items-center
+                                                %span= "#{user.first_name} #{user.last_name}"
+                                                %div.d-flex.align-items-center.justify-content-between
+                                                    = button_to("accept", accept_path(user.id), class: "btn btn-success", style: "margin-right: 5px")
+                                                    = button_to("decline", decline_path(user.id), class: "btn btn-danger")
+                                    
             .d-flex
                 = button_to('Log out', destroy_user_session_path, method: :delete, class: "btn btn-outline-primary my-2 my-sm-0")
