--- a/app/views/pages/view_profile.html.haml
+++ b/app/views/pages/view_profile.html.haml
@@ -2,14 +2,35 @@
     %div.card.bg-dark.text-light
         =image_tag 'dog_background_image.jpg', class: 'card-img-top'
         %div.card-header
-            %h4= "#{@profile.first_name} #{@profile.last_name}"
+            %div.d-flex.align-items-center.justify-content-between
+                %h4= "#{@profile.first_name.capitalize} #{@profile.last_name.capitalize}"
+                - if current_user.id == params[:id].to_i || !(@friend.nil?)
+                    %button.btn.btn-outline-light{"data-bs-toggle": "modal", "data-bs-target": "#staticBackdrop"}
+                        %i.fa-solid.fa-ellipsis
+                    .modal.fade{id: "staticBackdrop", "data-bs-backdrop": "static", "data-bs-keyboard": "false", "tabindex": "-1", "aria-labelledby": "staticBackdropLabel", "aria-hidden": "true"}
+                        .modal-dialog.modal-dialog-scrollable
+                            .modal-content
+                                .modal-header
+                                    - if current_user.id == params[:id].to_i
+                                        %h5.modal-title{id: "staticBackdropLabel"} Profile
+                                    - unless @friend.nil?
+                                        %h5.modal-title{id: "staticBackdropLabel"}= "#{@profile.first_name.capitalize}'s Profile"
+                                    %button.btn-close{"data-bs-dismiss": "modal", "aria-label": "Close"}
+                                .modal-body
+                                    %div.d-flex.flex-column
+                                        - if current_user.id == params[:id].to_i
+                                            = link_to('Edit profile', edit_user_registration_path, class: "btn btn-info btn-sm mb-2")
+                                            = link_to("Add more preferences", preferences_path, class: "btn btn-warning btn-sm")
+                                        - unless (@friend.nil?)
+                                            = button_to('Unfriend', unfriend_path(@profile.id), class: "btn btn-danger btn-sm", method: :delete)
+                                .modal-footer 
             %p.card-subtitle.mb-2.text-muted 
                 %span= @user_preferences.count
                 %span preferences 
             %p  
                 - @user_preferences.each do |breed|
                     %span.badge.rounded-pill.bg-primary= breed.name
-        %div.card-body
+        %div.card-body{id: "request"}
             - unless (@profile.id == current_user.id)
                 - if @request.nil?
                     = link_to('Add friend', add_friend_path(@profile.id), class: "btn btn-success btn-sm my-2")
@@ -26,6 +47,4 @@
             %h6.card-text= "Email: #{@profile.email}"
             %h6.card-text= "Birthdate: #{@profile.birthdate.strftime('%B %m, %Y')}"
             %h6.card-text= "Gender: #{@profile.sex}"
-            = link_to('Go back', dashboard_path, class: "btn btn-primary mt-2")
-
     
