--- a/app/views/posts/_new_post_form.html.haml
+++ b/app/views/posts/_new_post_form.html.haml
@@ -1,5 +1,6 @@
 %div.form-group.post-form
-    = form_with(model:[@breed, @post], remote: true) do |f|
+    = form_with(model:[@breed, @post], remote: true,
+    data: {controller: "reset-form new-post", action: "turbo:submit-end->new-post#updateUserId"}) do |f|
         = f.hidden_field :user_id, value: current_user.id
         = f.hidden_field :breed_id, value: @breed.id
         = f.text_field :body, class:"form-control", autocomplete: 'off'
