--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,53 +1,44 @@
-<div class="row">
-  <div class="col-sm-4 col-sm-offset-4">
-    <h1 class="text-center">Sign Up</h1>
-    <hr>
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-      <%= devise_error_messages! %>
-      <div class="form-group">
-        <%= f.label :first_name %><br />
-        <%= f.text_field :first_name, autocomplete: "off", class: 'form-control', placeholder: "Juan", required: true %>
-      </div>
-      <div class="form-group">
-        <%= f.label :last_name %><br />
-        <%= f.text_field :last_name, autocomplete: "off", class: 'form-control', placeholder: "Cameron", required: true %>
-      </div>
-      <div class="form-group">
-        <%= f.label :mobile_number %><br />
-        <%= f.telephone_field :mobile_number, autocomplete: "off", class: 'form-control', pattern:"[0-9]*", placeholder: "09xxxxxxxxx", minlength: 11, maxlength: 11, required: true %>
-      </div>
-      <div class="form-group">
-        <%= f.label :birthdate %><br />
-        <%= f.date_field :birthdate, class: 'form-control', max:"2004-01-01", min:"1922-01-01" , required: true %>
-      </div>
-      <div class="form-group">
-        <%= f.label :sex %><br />
-        <%= f.radio_button :sex, "male" %>
-        <%= f.label :female, "Male" %><br />
-        <%= f.radio_button :sex, 'female' %>
-        <%= f.label :male, "Female" %><br />
-      </div>
-      <div class="form-group">
-        <%= f.label :email %><br />
-        <%= f.email_field :email, autofocus: false, class: 'form-control', placeholder: "cameronjuan@email.com", required: true %>
-      </div>
-      <div class="form-group">
-        <%= f.label :password %>
-        <% if @minimum_password_length %>
-          <em>(<%= @minimum_password_length %> characters minimum)</em>
-        <% end %><br />
-        <%= f.password_field :password, autocomplete: "off", class: 'form-control', required: true %>
-      </div>
-      <div class="form-group">
-        <%= f.label :password_confirmation %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control', required: true %>
-      </div>
-      <div class="form-group">
-        <%= f.submit "Sign up", class: "btn btn-primary btn-block btn-lg" %>
-      </div>
-    <% end %>
-    <div class="text-center">
-      <%= render "devise/shared/links" %>
+<h2 class="text-left fw-bolder" style='margin-bottom: 20px;' >Sign Up</h2>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <%= devise_error_messages! %>
+  <div class='d-flex mb-2'>
+    <div class="form-group" style='margin-right: 5px;'>
+      <%= f.text_field :first_name, autocomplete: "off", class: 'form-control', placeholder: "First name", required: true %>
+    </div>
+    <div class="form-group">
+      <%= f.text_field :last_name, autocomplete: "off", class: 'form-control', placeholder: "Last name", required: true %>
     </div>
   </div>
+  <div class="form-group mb-1">
+    <%= f.email_field :email, autofocus: false, class: 'form-control', placeholder: "Email", required: true %>
+  </div>
+  <div class="form-group">
+    <%= f.telephone_field :mobile_number, autocomplete: "off", class: 'form-control', pattern:"[0-9]*", placeholder: "Mobile number", minlength: 11, maxlength: 11, required: true %>
+  </div>
+  <div class="form-group mb-2">
+    <% if @minimum_password_length %>
+      <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <% end %><br />
+    <%= f.password_field :password, autocomplete: "off", class: 'form-control', placeholder: "Password", required: true %>
+  </div>
+  <div class="form-group">
+    <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control', placeholder: "Password confirmation", required: true %>
+  </div>
+  <div class="form-group my-2">
+    <%= f.label :sex, "Gender", class: "fw-bold", style: "margin-right: 5px;" %>:
+    <%= f.radio_button :sex, "male" %>
+    <%= f.label :female, "Male", style: "margin-right: 5px;" %>
+    <%= f.radio_button :sex, 'female' %>
+    <%= f.label :male, "Female" %>
+  </div>
+  <div class="form-group mb-2">
+    <%= f.label :birthdate %>
+    <%= f.date_field :birthdate, class: 'form-control', max:"2004-01-01", min:"1922-01-01" , required: true %>
+  </div>
+  <div class="form-group mb-3">
+    <%= f.submit "Sign up", class: "btn btn-primary btn-block" %>
+  </div>
+<% end %>
+<div class="text-center">
+  <%= render "devise/shared/links" %>
 </div>
