--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,6 +38,12 @@ body::-webkit-scrollbar-thumb
 											  #2ab0ed 100%);
 }
 
+.shadow-top {
+	-webkit-box-shadow: 0 -1rem 1rem rgba(0,0,0,.15);
+	-moz-box-shadow: 0 -1rem 1rem rgba(0,0,0,.15);
+	box-shadow: 0 -1rem 1rem rgba(0,0,0,.15);
+}
+
 .message-box {
 width: fit-content;
 max-width: 40%;
