--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,9 +20,12 @@
   </head>
   <body>
     <% if user_signed_in?  %>
-      <%= render "layouts/header" %>
       <%= render 'layouts/alerts' %>
-      <%= yield %>
+      <%= render "layouts/header" %>
+      <div style='min-height: 100vh'>
+        <%= yield %>
+      </div>
+      <%= render 'layouts/footer' %>
     <% else %>
       <%= render 'layouts/alerts' %>
       <section class='container-fluid d-flex align-items-center justify-content-center'>
@@ -48,7 +51,7 @@
       // Enable pusher logging - don't include this in production
       Pusher.logToConsole = true;
 
-      var pusher = new Pusher('144480ed232e81e5c86c', {
+      var pusher = new Pusher( Rails.application.config.x.pusher, {
         cluster: 'eu'
       });
 
