--- a/app/views/pages/dashboard.html.haml
+++ b/app/views/pages/dashboard.html.haml
@@ -1,4 +1,7 @@
-%div.container
-    %h1 Dashboard
-
-
+.container-fluid.px-3.d-flex
+    .col-md-3
+        = render 'pages/left_panel'
+    .col-md-6.bg-secondary.vh-100
+        NEWS FEED
+    .col-md-3
+        RIGHT
