--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
       // Enable pusher logging - don't include this in production
       Pusher.logToConsole = true;
 
-      var pusher = new Pusher( Rails.application.config.x.pusher, {
+      var pusher = new Pusher('144480ed232e81e5c86c', {
         cluster: 'eu'
       });
 
