--- a/app/views/friends/_request.html.haml
+++ b/app/views/friends/_request.html.haml
@@ -9,4 +9,6 @@
             %i.fa-solid.fa-check
             %span Friends
     - else
-        %button.btn.btn-sm.disabled.btn-success.my-2 Request sent
+        %button.btn.btn-sm.disabled.btn-success.my-2
+            %i.fa-solid.fa-envelope-circle-check{style: "margin-right: 5px;"}
+            Request sent
