--- a/app/views/friends/_search_results.html.haml
+++ b/app/views/friends/_search_results.html.haml
@@ -4,29 +4,24 @@
             %li.list-group
                 %h5.text-warning User not found
         - users.each do |user|
-            = link_to( view_profile_path(user), id: 'profile-link', class: 'btn border-0 btn-outline-primary', style: 'margin-bottom: 5px;') do
-                %span.d-flex.align-items-center
-                    = image_tag 'user.png', style: "max-width: 50px;"
-                    .d-flex.flex-column{style: "margin-left: 20px;"}
-                        %h5
-                            %span= "#{highlight(user.first_name.capitalize, params[:username])}"
-                            - if params[:username].include? " "
-                                %span= "#{highlight(user.last_name.capitalize, params[:username].split(" ")[1])}"
-                            - else
-                                %span= "#{user.last_name.capitalize}"
-                        - if params[:action] == "create"
-                            -# %span.badge.bg-info= "#{user.user_preferences.count} Dog Preferences"
-                            - unless current_user.friends.find_by(friend_id: user.id, is_friends: true).nil?
-                                .d-flex.align-items-center
-                                    %i.fa-solid.fa-circle-check.text-success{style: "margin-right: 5px;"}
-                                    %span.fst-italic Friends
-                            - if current_user.id == user.id
-                                .d-flex.align-items-center
-                                    %i.fa-solid.fa-user.text-success{style: "margin-right: 5px;"}
-                                    %span.fst-italic You
-
-:javascript
-    var userInput = document.querySelector('#username')
-    document.querySelector('#profile-link').addEventListener('click', ()=>{
-        userInput.value = ""
-    })
+            %div{"data-bs-dismiss": "modal", "aria-label": "Close"}
+                = link_to( view_profile_path(user), id: 'profile-link', class: 'btn border-0 btn-outline-primary w-100', style: 'margin-bottom: 5px;') do
+                    %span.d-flex.align-items-center
+                        = image_tag 'user.png', style: "max-width: 50px;"
+                        .d-flex.flex-column{style: "margin-left: 20px;"}
+                            %h5
+                                %span= "#{highlight(user.first_name.capitalize, params[:username])}"
+                                - if params[:username].include? " "
+                                    %span= "#{highlight(user.last_name.capitalize, params[:username].split(" ")[1])}"
+                                - else
+                                    %span= "#{user.last_name.capitalize}"
+                            - if params[:action] == "create"
+                                -# %span.badge.bg-info= "#{user.user_preferences.count} Dog Preferences"
+                                - unless current_user.friends.find_by(friend_id: user.id, is_friends: true).nil?
+                                    .d-flex.align-items-center
+                                        %i.fa-solid.fa-circle-check.text-success{style: "margin-right: 5px;"}
+                                        %span.fst-italic Friends
+                                - if current_user.id == user.id
+                                    .d-flex.align-items-center
+                                        %i.fa-solid.fa-user.text-success{style: "margin-right: 5px;"}
+                                        %span.fst-italic You
