--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,7 @@
     <script src="https://js.pusher.com/7.2/pusher.min.js"></script>
     <script>
       // Enable pusher logging - don't include this in production
-      Pusher.logToConsole = true;
+      // Pusher.logToConsole = true;
 
       var pusher = new Pusher('144480ed232e81e5c86c', {
         cluster: 'eu'
