--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,45 +1,33 @@
-<div class="row">
-  <div class="col-sm-4 col-sm-offset-4">
-    <h1>Edit <%= resource_name.to_s.humanize %></h1>
-    <hr>
+<div class='d-flex align-items-center flex-column'>
+  <div class='p-5 shadow', style='min-height: 100vh'>
+    <h2 class='fw-bolder' style='margin-bottom: 20px;'>Edit <%= resource_name.to_s.humanize %></h2>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
       <%= devise_error_messages! %>
-
       <div class="form-group">
-        <%= f.label :email %><br />
-        <%= f.email_field :email, class: 'form-control'  %>
+        <%= f.email_field :email, class: 'form-control', placeholder: 'Email'  %>
       </div>
-
       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
         <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
       <% end %>
-
       <div class="form-group">
         <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
         <%= f.password_field :password, autocomplete: "off", class: 'form-control'  %>
       </div>
-
       <div class="form-group">
         <%= f.label :password_confirmation %><br />
         <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control'  %>
       </div>
-
       <div class="form-group">
         <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
         <%= f.password_field :current_password, autocomplete: "off", class: 'form-control'  %>
       </div>
-
       <div class="form-group">
-        <%= f.submit "Update", class: 'btn btn-lg btn-block btn-primary' %>
+        <%= f.submit "Update", class: 'btn btn-sm btn-block btn-primary mt-2' %>
       </div>
     <% end %>
-    <hr>
-
-    <h2>Cancel my account</h2>
-
-    <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), class: "btn btn-danger", data: { confirm: "Are you sure? You cannot undo this." }, method: :delete %></p>
-
-    <%= link_to "Back", :back %>
-    <hr>
+    <div class='border-top mt-5 pt-3'>
+      <h3 class='fw-bolder'>Cancel my account</h3>
+      <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), class: "btn btn-sm btn-danger", data: { confirm: "Are you sure? You cannot undo this." }, method: :delete %></p>
+    </div>
   </div>
 </div>
