--- a/app/views/pages/view_friends.html.haml
+++ b/app/views/pages/view_friends.html.haml
@@ -1,5 +1,5 @@
 .container-fluid.mt-5.px-5
-    - if pending_request().count > 0
+    - if pending_request().count > 0 || waiting_request().count > 0
         .border-bottom.border-dark.w-25.mb-4.pb-2
             %h4.m-0.p-0 Friend Requests
         .container-fluid
@@ -10,6 +10,14 @@
                         %h5.fw-bolder= "#{user.first_name.capitalize} #{user.last_name.capitalize}"
                         = button_to("Accept", accept_path(user.id), class:"btn btn-primary w-100 mb-2") 
                         = button_to("Decline", decline_path(user.id), class: "btn btn-outline-primary w-100" )
+            - waiting_request().each do |user|
+                .card{style: 'width: 250px;'}
+                    = image_tag 'dog-profile.jpg', class: "card-img-top", alt: "user_profile"
+                    .card-body
+                        %h5.fw-bolder= "#{user.first_name.capitalize} #{user.last_name.capitalize}"
+                        .d-flex.justify-content-center.align-items-center.p-2.bg-success.text-light.rounded-2.user-select-none
+                            %i.fa-solid.fa-envelope-circle-check{style: "margin-right: 5px;"}
+                            Request sent
     .my-3
         %nav.navbar
             .border-bottom.border-dark.w-25.mb-2.pb-2
