--- a/app/views/posts/_new_post_form.html.haml
+++ b/app/views/posts/_new_post_form.html.haml
@@ -3,5 +3,5 @@
     data: {controller: "reset-form new-post", action: "turbo:submit-end->new-post#updateUserId"}) do |f|
         = f.hidden_field :user_id, value: current_user.id
         = f.hidden_field :breed_id, value: @breed.id
-        = f.text_field :body, class:"form-control", autocomplete: 'off'
+        = f.text_field :body, class:"form-control", autocomplete: 'off', placeholder: "New post"
         = f.submit data: {disable_with: false}, class:'btn btn-primary'
